background color changed

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div id="root" style="padding-top: 3rem; min-height: 100vh;  background-color: #dddddd "></div>
+  <div id="root" style="padding-top: 3rem; min-height: 100vh;  background-color: #e4e4e4 "></div>
   <!-- <div style="position: absolute; min-height: 100vh; min-width: 100vw; z-index: -1">
     <img src="https://www.rowse.co.uk/static/images/blog/posts/open-graph/what-is-the-digital-railway-open-graph.jpg"
       alt="" style="position: fixed;">
