--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div id="root" style="padding-top: 3rem; min-height: 100vh;  background-color: #e4e4e4 "></div>
+  <div id="root" style="padding-top: 50px; min-height: 100vh; background-color: #e4e4e4; display: flex;"></div>
   <script type="module" src="/src/main.jsx"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
