--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/train-solid.svg"/>
+  <link rel="icon" type="image/svg+xml" href="/train-solid.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Depot</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -11,7 +11,9 @@
 </head>
 
 <body>
-  <div id="root" style="padding-top: 50px; min-height: 100vh; background-color: #e4e4e4; display: flex;"></div>
+  <div id="root"
+    style="padding-top: 50px; min-height: 100vh; background-color: #e4e4e4; display: flex">
+  </div>
   <script type="module" src="/src/main.jsx"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
