--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <div id="root"
-    style="padding-top: 50px; min-height: 100vh; background-color: #e4e4e4; display: flex">
+    style="padding-top: 50px; min-height: 100vh; background-color: #eeeeee; display: flex">
   </div>
   <script type="module" src="/src/main.jsx"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
